SPHEREON-158 prepare for 0.1.0 release
