# javascript-angularjs-closure/model/VndErrors.js
@@ -1,14 +1,0 @@
-goog.provide('model.VndErrors');
-
-/**
- * The error response
- * @record
- */
-model.VndErrors = function() {}
-
-/**
- * @type {!Array<!api.VndError>}
- * @export
- */
-model.VndErrors.prototype.errors;
-
